added folder for images

--- a/final.html
+++ b/final.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="light-bulb.png">
+    <link rel="icon" href="images/light-bulb.png">
     <title>Jane's Blog</title>
     <link rel="stylesheet" href="final.css">
 </head>
@@ -13,12 +13,12 @@
         <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique rerum asperiores ipsam perferendis, accusantium sapiente totam, facere quasi qui labore magnam in officia incidunt nam ipsum obcaecati cum iure Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus deserunt quibusdam mollitia nesciunt perferendis itaque culpa. Dignissimos vitae impedit aliquam tempore, consequuntur nemo illo non illum cumque ab. A, modi!.</p>
     </div>
     <div class="article">
-        <img src="cox.jpg" alt="cox">
+        <img src="images/cox.jpg" alt="cox">
         <p><small class="place">Cox's Bazar Sea Beach</small></p>
         <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi maxime ab ex illo temporibus ipsam aliquid hic quaerat sit quisquam? Fuga, sit debitis. Molestiae labore vel culpa accusamus ea illo veritatis beatae voluptatum quibusdam voluptatibus, neque dolorum possimus ad voluptates excepturi et pariatur consequuntur sapiente nemo laudantium sed aperiam eius! <button>Read More</button></p>
     </div>
     <div class="article">
-        <img src="beach.jpg" alt="beach">
+        <img src="images/beach.jpg" alt="beach">
         <p><small class="place">Cox's Bazar, Bangladesh</small></p>
         <p class="para2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, alias. Minus quod aperiam ipsa eum obcaecati optio. Saepe, rem magni exercitationem quam dicta soluta ab porro ipsa. Cupiditate neque voluptatum aperiam minus aspernatur, veritatis sint tempore iure similique consequatur possimus dolore perspiciatis dicta, placeat facilis ipsum laboriosam vitae delectus autem! <button>Read More</button></p>
     </div>
