Updated the read more to know more

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <div class="article">
         <img src="images/cox.jpg" alt="cox">
         <p><small class="place">Cox's Bazar Sea Beach</small></p>
-        <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi maxime ab ex illo temporibus ipsam aliquid hic quaerat sit quisquam? Fuga, sit debitis. Molestiae labore vel culpa accusamus ea illo veritatis beatae voluptatum quibusdam voluptatibus, neque dolorum possimus ad voluptates excepturi et pariatur consequuntur sapiente nemo laudantium sed aperiam eius! <button>Read More</button></p>
+        <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi maxime ab ex illo temporibus ipsam aliquid hic quaerat sit quisquam? Fuga, sit debitis. Molestiae labore vel culpa accusamus ea illo veritatis beatae voluptatum quibusdam voluptatibus, neque dolorum possimus ad voluptates excepturi et pariatur consequuntur sapiente nemo laudantium sed aperiam eius! <a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar" target="_blank"><button>Read More</button></a></p>
     </div>
     <div class="article">
         <img src="images/beach.jpg" alt="beach">
         <p><small class="place">Cox's Bazar, Bangladesh</small></p>
-        <p class="para2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, alias. Minus quod aperiam ipsa eum obcaecati optio. Saepe, rem magni exercitationem quam dicta soluta ab porro ipsa. Cupiditate neque voluptatum aperiam minus aspernatur, veritatis sint tempore iure similique consequatur possimus dolore perspiciatis dicta, placeat facilis ipsum laboriosam vitae delectus autem! <button>Read More</button></p>
+        <p class="para2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, alias. Minus quod aperiam ipsa eum obcaecati optio. Saepe, rem magni exercitationem quam dicta soluta ab porro ipsa. Cupiditate neque voluptatum aperiam minus aspernatur, veritatis sint tempore iure similique consequatur possimus dolore perspiciatis dicta, placeat facilis ipsum laboriosam vitae delectus autem! <a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar_Beach" target="_blank"><button>Read More</button></a></p>
     </div>
     <div id="form">
         <br><form action="">Contact Us
