Added the real information and text about cox's

--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
     <div>
         <h1 id="title">Welcome to my Blog</h1>
-        <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae similique rerum asperiores ipsam perferendis, accusantium sapiente totam, facere quasi qui labore magnam in officia incidunt nam ipsum obcaecati cum iure Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus deserunt quibusdam mollitia nesciunt perferendis itaque culpa. Dignissimos vitae impedit aliquam tempore, consequuntur nemo illo non illum cumque ab. A, modi!.</p>
+        <p class="para">Welcome to a land where the horizon is always green and the rivers sing the songs of the soil. Bangladesh is not just a country; it is a deltaic masterpiece woven by hundreds of rivers. From the roar of the Royal Bengal Tiger in the Sundarbans to the silent serenity of the tea gardens in Sylhet, nature here is raw, vibrant, and endlessly changing. This blog is my journey through the emerald landscapes, the monsoon rains, and the golden harvests of beautiful Bangladesh.</p>
     </div>
     <div class="article">
         <img src="images/cox.jpg" alt="cox">
         <p><small class="place">Cox's Bazar Sea Beach</small></p>
-        <p class="para2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Modi maxime ab ex illo temporibus ipsam aliquid hic quaerat sit quisquam? Fuga, sit debitis. Molestiae labore vel culpa accusamus ea illo veritatis beatae voluptatum quibusdam voluptatibus, neque dolorum possimus ad voluptates excepturi et pariatur consequuntur sapiente nemo laudantium sed aperiam eius! <a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar" target="_blank"><button>Read More</button></a></p>
+        <p class="para2">Imagine walking on a beach that never ends. Welcome to Cox's Bazar, the longest unbroken natural sea beach in the world. Stretching 120 kilometers along the Bay of Bengal, this is more than just a destination; it is an emotion. From the golden sands of Laboni Point to the quiet coral stones of Inani, the rhythm of the waves sets the pace of life here. Whether you are watching a fiery sunset melt into the ocean or driving along the majestic Marine Drive with hills on one side and the sea on the other, Cox's Bazar offers a symphony of nature that stays with you forever.<a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar" target="_blank"><button>Know More</button></a></p>
     </div>
     <div class="article">
         <img src="images/beach.jpg" alt="beach">
         <p><small class="place">Cox's Bazar, Bangladesh</small></p>
-        <p class="para2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam, alias. Minus quod aperiam ipsa eum obcaecati optio. Saepe, rem magni exercitationem quam dicta soluta ab porro ipsa. Cupiditate neque voluptatum aperiam minus aspernatur, veritatis sint tempore iure similique consequatur possimus dolore perspiciatis dicta, placeat facilis ipsum laboriosam vitae delectus autem! <a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar_Beach" target="_blank"><button>Read More</button></a></p>
+        <p class="para2">Imagine walking on a beach that never ends. Welcome to Cox's Bazar, the longest unbroken natural sea beach in the world. Stretching 120 kilometers along the Bay of Bengal, this is more than just a destination; it is an emotion. From the golden sands of Laboni Point to the quiet coral stones of Inani, the rhythm of the waves sets the pace of life here. Whether you are watching a fiery sunset melt into the ocean or driving along the majestic Marine Drive with hills on one side and the sea on the other, Cox's Bazar offers a symphony of nature that stays with you forever.<a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar_Beach" target="_blank"><button>Know More</button></a></p>
     </div>
     <div id="form">
         <br><form action="">Contact Us
@@ -39,6 +39,9 @@
         <br>
         <input type="submit">
         </form>
+    </div>
+    <div>
+        <footer>&copy;All Right Reserves to MD Jane Alam</footer>
     </div>
 </body>
 </html>
