--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="article">
         <img src="images/cox.jpg" alt="cox">
         <p><small class="place">Cox's Bazar Sea Beach</small></p>
-        <p class="para2">Imagine walking on a beach that never ends. Welcome to Cox's Bazar, the longest unbroken natural sea beach in the world. Stretching 120 kilometers along the Bay of Bengal, this is more than just a destination; it is an emotion. From the golden sands of Laboni Point to the quiet coral stones of Inani, the rhythm of the waves sets the pace of life here. Whether you are watching a fiery sunset melt into the ocean or driving along the majestic Marine Drive with hills on one side and the sea on the other, Cox's Bazar offers a symphony of nature that stays with you forever.<a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar_Beach" target="_blank"><button>Know More</button></a></p>
+        <p class="para2">Standing on the shores of Cox's Bazar, the roar of the Bay of Bengal fills your ears. This isn't just a beach; it is a festival of life. From the early morning joggers chasing the sunrise to the families gathering for a dip in the warm water, the energy here is contagious. The beach is lined with rows of Zau (tamarisk) trees, standing like silent guardians against the wind. Whether you are sipping on a fresh green coconut or riding a horse along the surf, the salty breeze of Cox's Bazar refreshes the soul.<a href="https://en.wikipedia.org/wiki/Cox%27s_Bazar_Beach" target="_blank"><button>Know More</button></a></p>
     </div>
     <div class="article">
         <img src="images/beach.jpg" alt="beach">
